need to work on code and image slide

--- a/Jupyter_Notebooks/Statistics/JS Reveal Slides/Bar_and_Pie_Charts.slides-1.html
+++ b/Jupyter_Notebooks/Statistics/JS Reveal Slides/Bar_and_Pie_Charts.slides-1.html
@@ -14719,7 +14719,7 @@ div.jp-OutputPrompt {
 
 <!-- BAR GRAPHS WITH KNOWN FREQUENCIES SLIDE -->
 
-<!-- <section><section>
+<section><section>
   <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
   <div class="jp-Cell-inputWrapper">
   <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -14746,7 +14746,7 @@ div.jp-OutputPrompt {
   </div>
   </div>
   </div></div>
-</section></section> -->
+</section></section>
 
 <!-- BAR GRAPH CODE AND IMAGE SLIDE -->
 
